src/objects/IRIS_Access_Buttons__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Used to control the visibility of buttons on the visualforce page. The controllers of the VF pages refer this custom setting to control the visibility buttons on their respective page.</description>
    <fields>
        <fullName>Approve_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve/Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_as_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save as Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>IRIS_Access_Buttons</label>
</CustomObject>